--- a/install
+++ b/install
@@ -2,7 +2,7 @@
 
 set -e
 
-CONFIG=${CONFIG:-install.conf.yaml}
+CONFIG=${CONFIG:-install.xdg.yaml}
 DOTBOT_DIR="dotbot"
 DOTBOT_BIN="bin/dotbot"
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
